# datamasque-python

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  NOTICE  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
datamasque/client/: __init__.py  base.py  connections.py  discovery.py  discovery_configs.py  dmclient.py  exceptions.py  files.py  ifm.py  license.py  ruleset_libraries.py  rulesets.py  runs.py  settings.py  spcs.py  users.py
datamasque/client/models/: connection.py  data_selection.py  discovery.py  discovery_config.py  dm_instance.py  files.py  git.py  ifm.py  license.py  pagination.py  ruleset.py  ruleset_library.py  runs.py  status.py  user.py
docs/: Makefile  client.models.rst  client.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  conftest.py  helpers.py  test_base.py  test_connections.py  test_discovery.py  test_discovery_configs.py  test_files.py  test_ifm.py  test_license.py  test_pagination.py  test_ruleset_library.py  test_rulesets.py  test_runs.py  test_settings.py  test_spcs.py  test_users.py
